# ARGUS

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
argus-agent/: Cargo.toml  build.rs
argus-agent/src/: config.rs  lib.rs  main.rs  security.rs
argus-agent/src/actions/: mod.rs
argus-agent/src/capabilities/: fabric.rs  mod.rs  sketches.rs
argus-agent/src/capabilities/providers/: completion_latency.rs  link_errors.rs  mod.rs  peer_liveness.rs  pfc_ecn.rs  qp_attribution.rs  retransmit.rs  throughput.rs
argus-agent/src/detection/: burst.rs  fusion.rs  mod.rs  rolling_stats.rs  rules.rs  timescale.rs
argus-agent/src/pipeline/: aggregator.rs  mod.rs
argus-agent/src/scheduler/: mod.rs  noop.rs  slurm.rs  types.rs
argus-agent/src/sources/: ebpf.rs  ebpf_parse.rs  hwcounters.rs  kallsyms.rs  kernel_compat.rs  mock.rs  mod.rs  process_resolver.rs  procfs.rs  replay.rs  tracepoint_format.rs
argus-agent/src/telemetry/: mod.rs  prometheus.rs
argus-agent/src/tui/: mod.rs
argus-agent/src/tui/widgets/: mod.rs
argus-agent/tests/: compat_tests.rs  proptest_detection.proptest-regressions  proptest_detection.rs  scenario_tests.rs  tui_snapshot_tests.rs
argus-agent/tests/snapshots/: tui_snapshot_tests__degraded_dashboard.snap  tui_snapshot_tests__empty_dashboard.snap  tui_snapshot_tests__healthy_dashboard.snap
argus-common/: Cargo.toml
argus-common/src/: capability.rs  lib.rs
argus-ebpf/: Cargo.toml
argus-ebpf/src/: interrupts.rs  main.rs  rdma.rs  rdma_jitter.rs  slab.rs
argus-test-scenarios/scenarios/: cable_degradation_slow.json  cable_fault_fast.json  healthy_baseline.json  interrupt_skew_ramp.json  link_flap_critical.json  noisy_but_healthy.json  rdma_latency_spike.json  slab_pressure_cascade.json
deploy/: argus.spec  argusd.conf  argusd.service
docs/: detection-engine-analysis.tex
scripts/: argus-discover  argus-manage-targets  argus-scheduler  argus-status  e2e-test.sh  export-dashboards.sh  generate-scenarios.py  inject-faults.sh  install.sh  setup-soft-roce.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+18 files in other folders)
