[package]
name = "argus-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ARGUS node-local telemetry agent daemon"

[lib]
name = "argus_agent"
path = "src/lib.rs"

[[bin]]
name = "argus-agent"
path = "src/main.rs"

[dependencies]
argus-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
prometheus-client = "0.23"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13"
aya-log = "0.2"

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["json"] }
tempfile = "3"
